# MixingCut

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: binary.yml
graphs/: G_27.graph  G_3.graph  G_34.graph  G_35.graph  G_48.graph  G_6.graph  G_8.graph  G_81.graph  be100.1.graph  bqp50-1.graph  enron.graph  mk487a.graph  sg3d1148000.graph  t3g5_6666.graph
src/: initialize.rs  io_operations.rs  main.rs  maxcut_oracle.rs  read_graph.rs  sdp_project.rs  step_rules.rs
