[package]
name = "tsmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sprs = "0.11.1"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
ndarray-rand = "0.15.0"
rayon = "1.10.0"

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
incremental = false