[package]
name = "mixingcut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sprs = "0.11.1"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
smolprng = { version = "0.1.6", features = ["std"] }
clap = { version = "4.5.16", features = ["derive"] }

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
target-cpu = "native"
