[package]
name = "mixingcut"
version = "0.1.0"
edition = "2021"
authors = ["Dustin Kenefake <dustin.kenefake@tamu.edu>"]
license = "BSD-3"
description = "A program to solve the MAXCUT SDP Relaxation."
readme = "README.md"
homepage = "https://github.com/DKenefake/MixingCut/"
repository = "https://github.com/DKenefake/MixingCut/"
keywords = ["optimization", "SDP", "graph"]
categories = ["command-line-utilities", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sprs = "0.11.1"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
smolprng = { version = "0.1.6", features = ["std"] }
clap = { version = "4.5.16", features = ["derive"] }

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
incremental = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
